# 2025_spbu_coursework

./: .gitignore  ml.ipynb  readme.md  test.rs
out2/: measure-25331.250000-0.100000.csv  measure-25331.250000-0.500000.csv  measure-25331.250000-0.900000.csv  measure-25331.250000.csv
rust/: .gitignore  Cargo.toml  build.rs  log.txt  read.me  readme.md
rust/kappa_wrapper/: .gitignore  Cargo.toml  build.rs  wrapper.h
rust/kappa_wrapper/examples/: 1.rs
rust/kappa_wrapper/kappa_c_wrap/: .gitignore  CMakeLists.txt  build.sh  rebuild.sh
rust/kappa_wrapper/kappa_c_wrap/example/: CMakeLists.txt  main.cpp
rust/kappa_wrapper/kappa_c_wrap/lib/: CMakeLists.txt  wrap.cpp  wrap.h
rust/kappa_wrapper/src/: hellomod.rs  lib.rs
rust/src/: data.rs  dataset.rs  inference.rs  main.rs  model.rs  training.rs
